--- a/components/card/card.html
+++ b/components/card/card.html
@@ -255,7 +255,7 @@
 
         <div class="card--textOnly__heading">Current Balance</div>
         <p class="textOnly--para"><i class="fas fa-rupee-sign"></i>5000</p>
-        <div class="card--textOnly__subheading">Suyash (878 8787 878)</div>
+        <div class="card--textOnly__subheading">Shubham (878 8787 878)</div>
     </div>
 </div>
 <div class="container">
@@ -268,7 +268,7 @@
                     
     &lt;div class="card--textOnly__heading">Current Balance&lt;/div>
     &lt;p class="textOnly--para">&lt;i class="fas fa-rupee-sign">&lt;/i>5000&lt;/p>
-    &lt;div class="card--textOnly__subheading">Suyash (878 8787 878)&lt;/div>
+    &lt;div class="card--textOnly__subheading">Shubham (878 8787 878)&lt;/div>
 &lt;/div>
 &lt;/div></code>
           </pre>
